# Coursework-of-Digital-Image-Processing

./: LICENSE  README.md
H_detector/: CMakeLists.txt  package.xml
H_detector/include/H_detector/: detector.h
H_detector/src/: H_detect.cpp  detector.cpp
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: my_yolov3_900.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/yolo_network_config/cfg/: my_yolov3.cfg
darknet_ros/darknet_ros/yolo_network_config/weights/: readme.txt
detector/: CMakeLists.txt  package.xml
detector/include/detector/: detector.h
detector/src/: H_detect.cpp  detector.cpp
image_test/: CMakeLists.txt  package.xml
image_test/src/: my_publisher.cpp  my_subscriber.cpp
machinevision/: CMakeLists.txt  package.xml
machinevision/src/: publisher.cpp  subscriber.cpp
