<package>
  <name>mechinevision</name>
  <version>0.0.0</version>
  <description>The package is build for my DIP work.</description>
  <author>Mookie</author>
  <maintainer email="mookie1702@gmail.com">Mookie</maintainer>
  <license>BSD</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


</package>
